--- a/portfolio.html
+++ b/portfolio.html
@@ -43,15 +43,17 @@
           <li class="item">
             <a class="link" href="mailto:info@devstudio.com">
               <svg class="mail-icon">
-                <use href="./images/sprite.svg#mail" width="16" height="12"></use></svg
-              >info@devstudio.com
+                <use href="./images/sprite.svg#mail" width="16" height="12"></use>
+              </svg>
+              info@devstudio.com
             </a>
           </li>
           <li class="item">
             <a class="link" href="tel:+380961111111">
               <svg class="phone-icon">
-                <use href="./images/sprite.svg#phone"></use></svg
-              >+38 096 111 11 11
+                <use href="./images/sprite.svg#phone"></use>
+              </svg>
+              +38 096 111 11 11
             </a>
           </li>
         </ul>
